--- a/nestedtemplates/webapps.json
+++ b/nestedtemplates/webapps.json
@@ -184,6 +184,19 @@
   },
   "resources": [
     {
+      "type": "Microsoft.Web/serverfarms",
+      "apiVersion": "2015-08-01",
+      "name": "[variables('appServicePlanName')]",
+      "location": "[resourceGroup().location]",
+      "tags": {
+        "displayName": "App Sevice Plan"
+      },
+      "sku": {
+        "name": "[parameters('appServicePlanSize')]",
+        "tier": "[parameters('appServicePlanTier')]"
+      }
+    },
+        {
       "type": "Microsoft.Web/Sites",
       "apiVersion": "2015-08-01",
       "name": "[variables('webAppWebAPIName')]",
