--- a/nestedtemplates/webapp5.json
+++ b/nestedtemplates/webapp5.json
@@ -214,7 +214,7 @@
           "appSettings": [
             {
               "Name": "Data:DefaultConnection:ConnectionString",
-              "value": "[concat('Data Source=tcp:', reference(concat('Microsoft.Sql/servers/', variables('sqlserverName'))).fullyQualifiedDomainName, ',1433;Initial Catalog=', variables('sqlDBname'), ';User Id=', parameters('sqlAdministratorLogin'), '@', reference(concat('Microsoft.Sql/servers/', variables('sqlserverName'))).fullyQualifiedDomainName, ';Password=', parameters('sqlAdministratorPassword'), ';')]"
+              "value": "[concat('Data Source=tcp:', reference(concat('Microsoft.Sql/servers/', variables('sqlserverName'))).fullyQualifiedDomainName, ',1433;Initial Catalog=', variables('sqlDBname'), ';User Id=', parameters('sqlAdministratorLogin'), '@', concat('Microsoft.Sql/servers/', variables('sqlserverName')).fullyQualifiedDomainName, ';Password=', parameters('sqlAdministratorPassword'), ';')]"
             }
           ]
         }
